Fix: Buttons jumping on specific mobile size

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,3 +1,13 @@
+@media screen and (min-width: 768px) {
+
+    /* portfolio
+    ===========================================*/
+
+    .btn-wrapper {
+    margin-bottom: 20px;
+
+}
+
 @media screen and (min-width: 850px) {
 
     /* Navigation
